[package]
name = "github_classroom_spreadsheets_integration"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
base64 = "0.13"
jsonwebtoken = { version = "8.2" }

